using UnityEngine;
using UnityEngine.UI;
using System.Collections;

public class Level13Java : MonoBehaviour
{
    public Sprite[] shieldSprites;             // ‚úÖ ‡πÉ‡∏™‡πà‡∏£‡∏π‡∏õ‡πÇ‡∏•‡πà‡πÉ‡∏ô Inspector
    public Transform shieldParent;          // ‚úÖ ‡∏ß‡∏≤‡∏á‡πÑ‡∏ß‡πâ‡πÉ‡∏ô Canvas
    public float spacing = 60f;             // ‚úÖ ‡∏£‡∏∞‡∏¢‡∏∞‡∏´‡πà‡∏≤‡∏á‡∏£‡∏∞‡∏´‡∏ß‡πà‡∏≤‡∏á‡πÇ‡∏•‡πà (Pixel)

    private PlayerController player;

    public void Correct(string answer, Text askText, PlayerController player)
    {
        this.player = player;

        int shieldCount = CountShields(answer);

        if (askText != null)
            askText.text = shieldCount.ToString();

        ClearShields();
        StartCoroutine(SpawnShieldsAndTrigger(shieldCount, "Win"));
    }

    public void Wrong(string answer, Text askText, PlayerController player)
    {
        this.player = player;
       
        int shieldCount = CountShields(answer);

        if (askText != null)
            if (string.IsNullOrEmpty(answer) || shieldCount == 0)
            {
                askText.text = "Lose!";
            }
            else
            {
                askText.text = shieldCount.ToString();
            }

        ClearShields();
        StartCoroutine(SpawnShieldsAndTrigger(shieldCount, "Lose"));
    }

    private int CountShields(string answer)
    {
        if (string.IsNullOrEmpty(answer)) return 0;

        string[] lines = answer.Split('\n');
        int count = 0;

        foreach (string line in lines)
        {
            if (line.Trim().StartsWith("Shield"))
                count++;
        }

        return count;
    }

    private void ClearShields()
    {
        foreach (Transform child in shieldParent)
        {
            Destroy(child.gameObject);
        }
    }

    private IEnumerator SpawnShieldsAndTrigger(int count, string trigger)
{
    for (int i = 0; i < count; i++)
    {
        GameObject shieldGO = new GameObject("ShieldImage");
        shieldGO.transform.SetParent(shieldParent, false);

        RectTransform rt = shieldGO.AddComponent<RectTransform>();
        rt.anchoredPosition = new Vector2(i * spacing, 0f);
        rt.sizeDelta = new Vector2(100f, 100f);

        Image image = shieldGO.AddComponent<Image>();

        if (shieldSprites != null && shieldSprites.Length > 0)
        {
            // ‡πÄ‡∏•‡∏∑‡∏≠‡∏Å‡πÅ‡∏ö‡∏ö‡πÄ‡∏£‡∏µ‡∏¢‡∏á‡∏•‡∏≥‡∏î‡∏±‡∏ö (‡∏ß‡∏ô‡∏ã‡πâ‡∏≥‡∏ñ‡πâ‡∏≤‡πÇ‡∏•‡πà‡πÄ‡∏¢‡∏≠‡∏∞‡∏Å‡∏ß‡πà‡∏≤ sprite ‡∏°‡∏µ)
            int spriteIndex = i % shieldSprites.Length;
            image.sprite = shieldSprites[spriteIndex];
        }

        image.preserveAspect = true;

        yield return new WaitForSeconds(0.05f);
    }

    yield return new WaitForSeconds(0.2f);
    TriggerPlayerAnimation(trigger);
}


    private void TriggerPlayerAnimation(string trigger)
    {
        if (player != null && player.CurrentCharacter != null)
        {
            Animator animator = player.CurrentCharacter.GetComponent<Animator>();
            if (animator != null)
            {
                animator.ResetTrigger("Win");
                animator.ResetTrigger("Lose");
                animator.ResetTrigger("Idle");
                animator.SetTrigger(trigger);
                Debug.Log($"üéØ Trigger: {trigger}");
            }
        }
    }
}
