using UnityEngine;
using UnityEngine.UI;
using System.Collections;

public class Level15Java : MonoBehaviour
{
    public Transform friedEggPoint;
    public Transform boiledEggPoint;
    public Transform panFriedEggPoint;
    public float runSpeed = 2f; // ‡∏Ñ‡∏ß‡∏≤‡∏°‡πÄ‡∏£‡πá‡∏ß‡πÉ‡∏ô‡∏Å‡∏≤‡∏£‡∏ß‡∏¥‡πà‡∏á

    public void Correct(string answer, Text askText, PlayerController player)
    {
        Debug.Log("‚úÖ Correct Level15Java");

        if (askText != null)
            askText.text = answer;

        if (player == null || player.CurrentCharacter == null)
            return;

        // ‡πÄ‡∏î‡∏¥‡∏ô‡∏•‡∏á ‡πÅ‡∏•‡πâ‡∏ß‡πÑ‡∏õ‡∏ï‡∏£‡∏á‡∏Å‡∏•‡∏≤‡∏á ‚Üí Win
        StartCoroutine(MoveToFixedXAndTrigger(player, boiledEggPoint.position.x, "Win"));
    }

    public void Wrong(string answer, Text askText, PlayerController player)
    {
        Debug.Log("‚ùå Wrong Level15Java");

        if (askText != null)
            askText.text = "Lose!";

        if (player == null || player.CurrentCharacter == null)
            return;

        float targetX = player.CurrentCharacter.transform.position.x;

        if (answer.Contains("Fried egg") && !answer.Contains("Pan"))
        {
            targetX = friedEggPoint.position.x;
        }
        else if (answer.Contains("Pan-fried"))
        {
            targetX = panFriedEggPoint.position.x;
        }

        // ‡πÄ‡∏î‡∏¥‡∏ô‡∏•‡∏á ‡πÅ‡∏•‡πâ‡∏ß‡πÑ‡∏õ‡∏ã‡πâ‡∏≤‡∏¢‡∏´‡∏£‡∏∑‡∏≠‡∏Ç‡∏ß‡∏≤ ‚Üí Lose
        StartCoroutine(MoveToFixedXAndTrigger(player, targetX, "Lose"));
    }

    private IEnumerator MoveToFixedXAndTrigger(PlayerController player, float targetX, string trigger)
{
    GameObject character = player.CurrentCharacter;
    Animator animator = character.GetComponent<Animator>();

    // ‚úÖ ‡∏ö‡∏±‡∏ô‡∏ó‡∏∂‡∏Å‡∏ï‡∏≥‡πÅ‡∏´‡∏ô‡πà‡∏á‡πÄ‡∏£‡∏¥‡πà‡∏°‡∏ï‡πâ‡∏ô
    Vector3 originalPosition = character.transform.position;

    // ‡πÄ‡∏î‡∏¥‡∏ô‡∏•‡∏á
    animator.SetTrigger("Run");
    Vector3 downTarget = originalPosition + new Vector3(0f, -0.7f, 0f);
    yield return StartCoroutine(MoveToPosition(character, downTarget, runSpeed));

    // ‡∏´‡∏±‡∏ô‡∏ã‡πâ‡∏≤‡∏¢/‡∏Ç‡∏ß‡∏≤
    float dirX = targetX - character.transform.position.x;
    if (dirX != 0)
    {
        Vector3 scale = character.transform.localScale;
        scale.x = dirX > 0 ? Mathf.Abs(scale.x) : -Mathf.Abs(scale.x);
        character.transform.localScale = scale;
    }

    // ‡πÄ‡∏î‡∏¥‡∏ô‡πÅ‡∏ô‡∏ß‡∏ô‡∏≠‡∏ô
    Vector3 horizontalTarget = new Vector3(targetX, downTarget.y, downTarget.z);
    animator.SetTrigger("Run");
    yield return StartCoroutine(MoveToPosition(character, horizontalTarget, runSpeed));

    // ‡πÅ‡∏™‡∏î‡∏á‡∏ó‡πà‡∏≤‡∏ó‡∏≤‡∏á Win / Lose
    TriggerAnimation(animator, trigger);

    // ‚úÖ ‡∏ñ‡πâ‡∏≤‡πÅ‡∏û‡πâ ‡πÄ‡∏î‡∏¥‡∏ô‡∏Å‡∏•‡∏±‡∏ö‡∏à‡∏∏‡∏î‡πÄ‡∏î‡∏¥‡∏°
if (trigger == "Lose")
{
    yield return new WaitForSeconds(0.8f); // ‡∏£‡∏≠‡∏ó‡πà‡∏≤ Lose

    animator.SetTrigger("Run");
    yield return StartCoroutine(MoveToPosition(character, originalPosition, runSpeed));

    // ‡∏´‡∏±‡∏ô‡∏Å‡∏•‡∏±‡∏ö‡∏Ç‡∏ß‡∏≤
    Vector3 scale = character.transform.localScale;
    scale.x = Mathf.Abs(scale.x);
    character.transform.localScale = scale;

    yield return new WaitForSeconds(0.2f); // ‡∏£‡∏≠‡πÄ‡∏î‡∏¥‡∏ô‡∏Å‡∏•‡∏±‡∏ö‡∏´‡∏¢‡∏∏‡∏î

    // ‚úÖ Reset ‡∏Å‡πà‡∏≠‡∏ô Trigger Idle ‡πÄ‡∏û‡∏∑‡πà‡∏≠‡∏Ñ‡∏ß‡∏≤‡∏°‡∏ä‡∏±‡∏ß‡∏£‡πå
    animator.ResetTrigger("Run");
    animator.ResetTrigger("Win");
    animator.ResetTrigger("Lose");

    // ‚úÖ Trigger Idle
    animator.SetTrigger("Idle");
    Debug.Log("‚úÖ Triggered: Idle");
}
}


    private IEnumerator MoveToPosition(GameObject obj, Vector3 target, float speed)
    {
        while (Vector3.Distance(obj.transform.position, target) > 0.05f)
        {
            obj.transform.position = Vector3.MoveTowards(obj.transform.position, target, speed * Time.deltaTime);
            yield return null;
        }
    }

    private void TriggerAnimation(Animator animator, string trigger)
    {
        if (animator != null && animator.runtimeAnimatorController != null)
        {
            animator.ResetTrigger("Win");
            animator.ResetTrigger("Lose");
            animator.ResetTrigger("Idle");
            animator.SetTrigger(trigger);
            Debug.Log($"üéØ Triggered: {trigger}");
        }
    }
}
